tests/vertical-slice/reject/array_repeat_non_clone_element.hew
// Reject fixture: [r; N] where the element type is not Clone must be rejected
// at compile time with a clear diagnostic. A record containing a Vec field has
// no synthesised clone thunk (container-in-container path is not yet supported)
// and must fail closed rather than silently producing a bad clone.
type Bag {
    items: Vec<i64>;
}

fn main() -> i64 {
    let b = Bag { items: [1, 2, 3] };
    let bs = [b; 3];
    0
}
